--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "history": "^3.0.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "react-validate-form": "^1.0.6",
+    "reactjs-localstorage": "0.0.6"
   }
-  
 }
